[metadata]
name = zaphod
version = 0.7.0
author = Ankur Sinha
author_email = ankursinha@fedoraproject.org
url = https://github.com/sanjayankur31/zaphod
license = GPL-3.0-or-later
description = A LaTeX change tracking tool
long_description = file: README.rst
long_description_content_type = text/rst
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =

packages = find:

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    zaphod                = zaphod.zaphod:cli

[options.package_data]

[options.extras_require]

[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504
